SME-7 fix NavButton PropType, fix logo alignment in empty notification page

--- a/pwa-shell/src/sass/notifications.scss
+++ b/pwa-shell/src/sass/notifications.scss
@@ -5,36 +5,26 @@
   color: $color-dark;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   
   &--empty {
     background-color: #FFFFFF;
+
+    .footer-background {
+      min-height: 30vh;
+      background-size: cover;
+      background-image: url(../images/Vegetato@2x.png);
+      clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0% 100%);
+    }
   }
 
   .card {
     margin: 2rem auto;
   }  
 
-  
   &__list {
     background-color: $color-primary-lightest;
     padding-right: 15px;
-    padding-left: 15px;    
-
-    &--empty {
-      display: flex;
-      flex-direction: column;
-      flex-grow: 1;
-      
-      .body {
-        flex-grow: 1;
-      }  
-  
-      .footer-background {
-        min-height: 30vh;
-        background-size: cover;
-        background-image: url(../images/Vegetato@2x.png);
-        clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0% 100%);
-      }
-    }    
+    padding-left: 15px;
   }
 }
